GS-12406 removed scripts and fixed some corner cases